Remove warnings raised by Java 21